# AIM-communication

./: README.md
TCPIP/: CMakeLists.txt  package.xml
TCPIP/include/TCPIP/: node_declare.h
TCPIP/launch/: TCPIP.launch
TCPIP/src/: C_TCPIP.cpp  C_client_test.cpp
comm_bridge/: CMakeLists.txt  package.xml
comm_bridge/include/comm_bridge/: node_declare.h
comm_bridge/launch/: comm_bridge.launch  comm_bridge_prev.launch  comm_bridge_road.launch  comm_bridge_track.launch
comm_bridge/msg/: control_msg.msg
comm_bridge/src/: C_TCPIP.cpp  C_client_test.cpp  platform_bridge.cpp
